arm64/uh: Add CONFIG_AH (KDP minimal), retain CONFIG_UH for BT
- Introduced CONFIG_AH (default y) for minimal hypervisor.
- Kept CONFIG_UH default y to ensure Bluetooth support.
- Simplified uh/Makefile: only build kdp_minimal.o (Fede2782).
- Disabled CONFIG_SAMSUNG_FREECESS in defconfig.

Maintains Bluetooth while enabling minimal kernel defense support.

--- a/kernel-6.6/arch/arm64/Kconfig
+++ b/kernel-6.6/arch/arm64/Kconfig
@@ -2364,9 +2364,15 @@ endmenu # "Boot options"
 
 menu "Hypervisor"
 
+config AH
+	bool "Enable kdp minimal"
+	default y
+	help
+	  It enables minimal kdp for load bt connectivity.
+
 config UH
 	bool "Enable micro hypervisor feature"
-	default y
+	default n
 	help
 	  It enables a micro hypervisor.
 	  It's samsung's hypervisor.
