--- a/kernel-6.6/drivers/uh/Makefile
+++ b/kernel-6.6/drivers/uh/Makefile
@@ -1,4 +1,4 @@
-obj-$(CONFIG_UH) 		+= uh_debug_log.o kdp_minimal.o
+obj-$(CONFIG_AH) 		+= kdp_minimal.o
 obj-$(CONFIG_RKP)                 += rkp.o
 obj-$(CONFIG_RKP)                 += rkp_module_support.o
 #obj-$(CONFIG_KDP)                 += kdp.o
